[package]
name = "jupiter-swap-api-client"
version = "0.1.1"
description = "Jupiter Swap API rust client"
edition = { workspace = true }

[dependencies]
anyhow = "1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.140"
solana-sdk = "2.2.1"
solana-account-decoder = "2.0.25"
thiserror = "2.0.12"
base64 = "0.22.1"
serde_qs = "0.13.0"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
rust_decimal = "1.36.0"
tokio = { version = "1.44.1", features = ["full"] }
